PlaceWithBookmaredDTO 수정